# file_organizer-

./: CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  dist-workspace.toml
.github/workflows/: ci.yml
docs/: design.md
src/: cli.rs  main.rs  models.rs  organizer.rs
tests/: cli.rs
