[package]
name = "file_organizer"
version = "0.1.2"
edition = "2024"
description = "A CLI tool to automatically organize files into categorized directories"
repository = "https://github.com/Mahathi-s154/file_organizer-"
homepage = "https://github.com/Mahathi-s154/file_organizer-"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
